force-app/main/default/objects/SalesAgreementProduct/fields/Actual_YTD_revenue_TC__c.field-meta.xml
<CustomField>
    <fullName>Actual_YTD_revenue_TC__c</fullName>
    <label>Actual (YTD) revenue (TC)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>