force-app/main/default/objects/SalesAgreementProduct/fields/Actual_YTD_volume_dry__c.field-meta.xml
<CustomField>
    <fullName>Actual_YTD_volume_dry__c</fullName>
    <label>Actual (YTD) volume (dry)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>