force-app/main/default/objects/SalesAgreementProduct/fields/Budget_revenue_Euro__c.field-meta.xml
<CustomField>
    <fullName>Budget_revenue_Euro__c</fullName>
    <label>Budget revenue (Euro)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>