force-app/main/default/objects/SalesAgreementProduct/fields/Budget_volume_UoM__c.field-meta.xml
<CustomField>
    <fullName>Budget_volume_UoM__c</fullName>
    <label>Budget volume (UoM)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>