force-app/main/default/objects/SalesAgreementProduct/fields/Condition_Type__c.field-meta.xml
<CustomField>
    <fullName>Condition_Type__c</fullName>
    <formula>CASE(TEXT(Invoicing_Type__c), &apos;Full delivered Price Shown Only&apos;,&apos;ZPT3&apos;, &apos;Price components combined into one price excluding ESC which should be shown separately&apos;,&apos;ZPT0&apos;,&apos;Prices combined into one price, excluding transport price, which should be shown separately&apos;,&apos;ZPT0&apos;,&apos; &apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Condition Type</label>
    <type>Text</type>
</CustomField>