force-app/main/default/objects/SalesAgreementProduct/fields/Energy_Surcharge_Condition_Type__c.field-meta.xml
<CustomField>
    <fullName>Energy_Surcharge_Condition_Type__c</fullName>
    <formula>CASE(TEXT(Invoicing_Type__c), &apos;Prices combined into one price excluding transport price, which should be shown separately&apos;, &apos;ZPE1&apos;,
&apos;Full delivered price shown only&apos;,&apos;ZPE1&apos;,
&apos;Price components combined into one price, excluding energy surcharge, which should be shown separately&apos;,&apos;ZPE0&apos;
,&apos;Prices combined into one price excluding ESC and Transport price, which should each be shown separately&apos;,&apos;ZPE0&apos;,&apos;All prices shown separately&apos;,&apos;ZPE0&apos;,&apos; &apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Energy Surcharge Condition Type</label>
    <type>Text</type>
</CustomField>