force-app/main/default/objects/SalesAgreementProduct/fields/Energy_Surcharge_Reports__c.field-meta.xml
<CustomField>
    <fullName>Energy_Surcharge_Reports__c</fullName>
    <formula>Previous_Energy_Surcharge__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Energy Surcharge number</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>