force-app/main/default/objects/SalesAgreementProduct/fields/Final_Customer_Code__c.field-meta.xml
<CustomField>
    <fullName>Final_Customer_Code__c</fullName>
    <label>Final Customer Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>