force-app/main/default/objects/SalesAgreementProduct/fields/Freight_Surcharge_opera__c.field-meta.xml
<CustomField>
    <fullName>Freight_Surcharge_opera__c</fullName>
    <formula>FreightSurcharges__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Freight Surcharge (per uom)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>