force-app/main/default/objects/SalesAgreementProduct/fields/KMEIN_Condition_Unit__c.field-meta.xml
<CustomField>
    <fullName>KMEIN_Condition_Unit__c</fullName>
    <formula>uom__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>KMEIN - Condition Unit</label>
    <type>Text</type>
</CustomField>