force-app/main/default/objects/SalesAgreementProduct/fields/KSCHL_Condition_type__c.field-meta.xml
<CustomField>
    <fullName>KSCHL_Condition_type__c</fullName>
    <formula>CASE(TEXT(Invoicing_Type__c), &apos;Full delivered Price Shown Only&apos;, &apos;ZPR2&apos;,
&apos;Price components combined into one price excluding ESC which should be shown separately&apos;, &apos;ZPR1&apos;,
&apos;prices combined into one price excluding transport price, which should be shown separately&apos;,&apos;ZPR1&apos;,&apos; &apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>KSCHL - Condition type</label>
    <type>Text</type>
</CustomField>