force-app/main/default/objects/SalesAgreementProduct/fields/Last_year_revenue_TC__c.field-meta.xml
<CustomField>
    <fullName>Last_year_revenue_TC__c</fullName>
    <label>Last year revenue (TC)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>