force-app/main/default/objects/SalesAgreementProduct/fields/Last_Year_volume_UoM__c.field-meta.xml
<CustomField>
    <fullName>Last_Year_volume_UoM__c</fullName>
    <label>Last Year volume (UoM)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>