force-app/main/default/objects/SalesAgreementProduct/fields/MaterialGroup5__c.field-meta.xml
<CustomField>
    <fullName>MaterialGroup5__c</fullName>
    <formula>Imerys_Product1__r.Material_Group_5__c</formula>
    <label>Material Group 5</label>
    <type>Text</type>
</CustomField>