force-app/main/default/objects/SalesAgreementProduct/fields/Old_Full_delivered_Price__c.field-meta.xml
<CustomField>
    <fullName>Old_Full_delivered_Price__c</fullName>
    <label>Old Full delivered Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>