force-app/main/default/objects/SalesAgreementProduct/fields/Old_Full_Delivered_Price_Number__c.field-meta.xml
<CustomField>
    <fullName>Old_Full_Delivered_Price_Number__c</fullName>
    <formula>Old_Full_delivered_Price__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Old Full Delivered Price Number</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>