force-app/main/default/objects/SalesAgreementProduct/fields/Previous_Energy_Surcharge__c.field-meta.xml
<CustomField>
    <fullName>Previous_Energy_Surcharge__c</fullName>
    <label>Energy Surcharge</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>