force-app/main/default/objects/SalesAgreementProduct/fields/Previous_Ex_works_Product_price_per_unit__c.field-meta.xml
<CustomField>
    <fullName>Previous_Ex_works_Product_price_per_unit__c</fullName>
    <label>Ex-works / Product price per unit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>