force-app/main/default/objects/SalesAgreementProduct/fields/Previous_Freight_Surcharge_per_uom__c.field-meta.xml
<CustomField>
    <fullName>Previous_Freight_Surcharge_per_uom__c</fullName>
    <label>Freight Surcharge (per uom)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>