force-app/main/default/objects/SalesAgreementProduct/fields/Previous_Full_delivered_Price_inc__c.field-meta.xml
<CustomField>
    <fullName>Previous_Full_delivered_Price_inc__c</fullName>
    <label>Full delivered Price - inc surcharge</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>