force-app/main/default/objects/SalesAgreementProduct/fields/Previous_Packaging_Price__c.field-meta.xml
<CustomField>
    <fullName>Previous_Packaging_Price__c</fullName>
    <label>Packaging Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>