force-app/main/default/objects/SalesAgreementProduct/fields/Previous_Product_Unit_Price__c.field-meta.xml
<CustomField>
    <fullName>Previous_Product_Unit_Price__c</fullName>
    <label>Product Unit Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>