force-app/main/default/objects/SalesAgreementProduct/fields/Previous_Product_Unit_Price_number__c.field-meta.xml
<CustomField>
    <fullName>Previous_Product_Unit_Price_number__c</fullName>
    <formula>Previous_Product_Unit_Price__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Unit Price number</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>