force-app/main/default/objects/SalesAgreementProduct/fields/Previous_Total_transport_price__c.field-meta.xml
<CustomField>
    <fullName>Previous_Total_transport_price__c</fullName>
    <label>Total transport price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>