force-app/main/default/objects/SalesAgreementProduct/fields/Previous_Transport_Price_Per_Container__c.field-meta.xml
<CustomField>
    <fullName>Previous_Transport_Price_Per_Container__c</fullName>
    <label>Transport Price Per Container</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>