force-app/main/default/objects/SalesAgreementProduct/fields/Sold_To__c.field-meta.xml
<CustomField>
    <fullName>Sold_To__c</fullName>
    <formula>SalesAgreement.Bill_To_ERP_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sold To</label>
    <type>Text</type>
</CustomField>