force-app/main/default/objects/SalesAgreementProduct/fields/Steric_Acid_Surcharge_Target_per_uom__c.field-meta.xml
<CustomField>
    <fullName>Steric_Acid_Surcharge_Target_per_uom__c</fullName>
    <label>Steric Acid Surcharge (Target - per uom)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>