force-app/main/default/objects/SalesAgreementProduct/fields/Total_transport_price_opera__c.field-meta.xml
<CustomField>
    <fullName>Total_transport_price_opera__c</fullName>
    <formula>Transportpricelumpsum__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total transport price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>