force-app/main/default/objects/SalesAgreementProduct/fields/Transportpricelumpsum__c.field-meta.xml
<CustomField>
    <fullName>Transportpricelumpsum__c</fullName>
    <label>Transport Price Lump Sum</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>