force-app/main/default/objects/SalesAgreementProduct/fields/TransportpricelumpsumTarget__c.field-meta.xml
<CustomField>
    <fullName>TransportpricelumpsumTarget__c</fullName>
    <label>Transport Price Lump Sum (Target)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>