force-app/main/default/objects/SalesAgreementProduct/fields/Unique_Key__c.field-meta.xml
<CustomField>
    <fullName>Unique_Key__c</fullName>
    <label>Unique Key</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>