force-app/main/default/objects/SalesAgreementProduct/fields/Unit_reports1__c.field-meta.xml
<CustomField>
    <fullName>Unit_reports1__c</fullName>
    <formula>TEXT(Unit__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Unit 1</label>
    <type>Text</type>
</CustomField>